[metadata]
name = Elan
version = 0.0.1
description = The Easy Lab Notebook command line utility
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/MrHedmad/Elan
author = MrHedmad
author_email = visentin.hl@gmail.com
license = The Unlicense
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True

[options.packages.find]
#include=pkg1, pkg2
exclude = black 

[options.entry_points]
console_scripts =
    elan = Elan.core:main
